Fix spacing, add colors and design displays to dashboard

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -44,9 +44,9 @@ h1, h2 {
 }
 
 .dashboard-buttons {
-  margin: 10px;
+  margin: 30px;
+  margin-top: 80px;
   font-size: 25px;
-
 }
 
 .right-contents {
@@ -117,6 +117,7 @@ fieldset {
   border-image: linear-gradient(to bottom right, #b827fc 0%, #2c90fc 25%, #b8fd33 50%, #fec837 75%, #fd1892 100%);
   border-image-slice: 1;
   border-radius: 25px;
+  margin-top: 60px;
 }
 
 .trip-request-box {
@@ -208,10 +209,14 @@ h3, h4 {
 }
 
 .message-display {
+  font-weight: bold;
   width: 870px;
   align-items: center;
   text-align: center;
   margin-right: 200px;
+  border: 5px solid transparent;
+  border-image: linear-gradient(to bottom right, #b827fc 0%, #2c90fc 25%, #b8fd33 50%, #fec837 75%, #fd1892 100%);
+  border-image-slice: 1;
 }
 
 .trip-type {
@@ -233,6 +238,7 @@ h3, h4 {
 
 .your-trips {
   margin-left: 0px;
+  margin-top: 30px;
   margin-right: 100px;
   font-size: 40px;
   border: 3px solid #FFADAD;
